:sparkles: file update

--- a/javascript/project 5/index.html
+++ b/javascript/project 5/index.html
@@ -19,10 +19,10 @@
             <br><br><select name="flist" id="flist" size="6"></select>
             <br><input type="button" value="Finalizar" onclick="finalize()">
         </div>
-        <div id="res"> </div>
-        <div id="res1"></div>
+        <div id="res"></div>
+        <!-- <div id="res1"></div>
         <div id="res2"></div>
-        <div id="res3"></div>
+        <div id="res3"></div> -->
 
     </section>
     <footer>
