:sparkles: file update 4

--- a/javascript/project 1/index.html
+++ b/javascript/project 1/index.html
@@ -16,11 +16,11 @@
             
         </div>
         <div id="photo">
-            <img id="image" src="tarde.jpg" alt="" width="500" height="305">
+            <img id="image" src="afternoon.jpg" alt="" width="500" height="305">
         </div>
     </section>
     <footer>
-        <p>&copy;By Rodrigo Teixeira</p>
+        <p>&copy;By Projetos Propostos</p>
 
     </footer>
     <script src="script.js"></script>
