--- a/javascript/project 2/index.html
+++ b/javascript/project 2/index.html
@@ -31,7 +31,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy;By Rodrigo Teixeira</p>
+        <p>&copy;By Projetos Propostos</p>
 
     </footer>
     <script src="script.js"></script>
