--- a/javascript/project 5/index.html
+++ b/javascript/project 5/index.html
@@ -26,7 +26,7 @@
 
     </section>
     <footer>
-        <p>&copy;By Rodrigo Teixeira</p>
+        <p>&copy;By Projetos Propostos</p>
 
     </footer>
     <script src="script.js"></script>
